--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -121,8 +121,8 @@
                       <i class="icon-heart"></i>
                     </div>
                   </div>
-                  <div class="value">39</div>
-                  <div class="stat-name">Likes</div>
+                  <div class="value"><%= @shares.count %></div>
+                  <div class="stat-name">Shares</div>
 
                   <div class="percent">(+12%)</div>
                   <div class="progress-bar audience-progress">
@@ -138,7 +138,7 @@
                       <i class="icon-comment"></i>
                     </div>
                   </div>
-                  <div class="value">18</div>
+                  <div class="value"><%= Comment.all.count %></div>
                   <div class="stat-name">Comments</div>
 
                   <div class="percent">(+78%)</div>
