--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,9 +39,10 @@
     <div class="span4 box-border signup">
       <div class="row-fluid">
         <div class="span12">
-          <h2>Sign up for news!</h2>
-
-          <p>This application will be under development till May,2013 </p>
+          <h2>Sign up!</h2>
+          <p><%= link_to "Sign up as commenter", new_user_registration_registration_url, :class => "btn btn-small dark-blue" %> </p>
+        <h2>Get Widget !</h2>
+          <%= link_to "Get widget", new_setup_path, :class => "btn btn-small dark-blue" %>
         </div>
       </div>
 
@@ -73,7 +74,7 @@
 
   <div class="row-fluid hero-row hidden-phone">
     <div class="span12 hero-title">
-      <img src="/assets/coming-soon.png" alt="Coming soon!"/>
+      We are ready for Demo!
     </div>
   </div>
 
