--- a/app/views/user_registrations/new.html.erb
+++ b/app/views/user_registrations/new.html.erb
@@ -16,7 +16,7 @@
                   </li>
 
                   <li>
-                    <i class="icon-user" style="float: left;"></i>
+                    <i class="icon-envelope" style="float: left;"></i>
                     <%= f.email_field :email, :autocomplete => "off", :id => "username", :placeholder => "Email" %>
                   </li>
 
