--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -3,7 +3,7 @@
     <div class="span12">
       <div class="box bordered">
         <div class="box-header">
-          <i class="icon-comments">&nbsp; Comments</i>
+          <i class="icon-comments">&nbsp; COMMENTS</i>
         </div>
         <div class="box inner light-gray">
           <div class="row-fluid padded10">
@@ -110,11 +110,6 @@
   </div>
 </div>
 
-<script>
-    $('.link_div').on('click', function () {
-        location = $(this).data('link');
-    })
-</script>
 <style>
     .link_div {
         cursor: hand !important;
