--- a/app/views/user_registrations/edit.html.erb
+++ b/app/views/user_registrations/edit.html.erb
@@ -1,18 +1,17 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-    <%= f.error_notification %>
 
-    <div class="inputs">
-      <%= f.input :username, :required => true, :autofocus => true %>
-      <%= f.input :email, :required => true, :autofocus => true %>
-      <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-      <%= f.input :password_confirmation, :required => false %>
-      <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+    <div class="text_fields">
+      <%= f.text_field :username, :required => true, :autofocus => true %>
+      <%= f.text_field :email, :required => true, :autofocus => true %>
+      <%= f.text_field :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+      <%= f.text_field :password_confirmation, :required => false %>
+      <%= f.text_field :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
     </div>
 
     <div class="actions">
-      <%= f.button :submit, "Update" %>
+      <%= f.submit "Update" %>
     </div>
 <% end %>
 
