--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -191,7 +191,7 @@
 
                 </div>
 
-                <div class="percent">(+<%= @shares_overall %>%)</div>
+                <div class="percent">(+<%= @ratings_overall %>%)</div>
                 <div class="progress-bar audience-progress">
                   <div class="progress progress-medium-blue">
                     <div class="bar" style="width: <%= @shares_overall %>%"></div>
