--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -194,7 +194,7 @@
                 <div class="percent">(+<%= @ratings_overall %>%)</div>
                 <div class="progress-bar audience-progress">
                   <div class="progress progress-medium-blue">
-                    <div class="bar" style="width: <%= @shares_overall %>%"></div>
+                    <div class="bar" style="width: <%= @ratings_overall %>%"></div>
                   </div>
                 </div>
               </li>
